--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,15 @@ body{
     align-items: center;
     background: var(--very-dark-blue-main-bg, #0D192C);
     
-@media (max-width: 480px) { 
-    display: flex;
-    width: 375px;
-    height: 667px;
-    padding: 62px 24px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+    @media (max-width: 480px) { 
+        display: flex;
+        width: 375px;
+        height: 667px;
+        padding: 62px 24px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 .boxshadow{
     width: 350px;
@@ -36,51 +36,45 @@ body{
     border-radius: 15px;
     background: var(--very-dark-blue-card-bg, #15263F);
     box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.10);
-    
-} 
+}
+
 .contenedor_imagen{
     margin: 24px;
     height: 302px;
     width: 302px;
     flex-shrink: 0;
     border-radius: 8px;
-    background-image: url(images/image-equilibrium.jpg);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
+    position: relative;
     
 }
-
-.imagen{
-    border-radius: 8px;
-    width:302px;
-    height:302px;
-    opacity: 0;
+.contenedor_imagen img{    
+    width: 100%;
+    display: block;
     
 }
-
-
 .hover{
-    width:302px;
-    height:302px;
-    border-radius: 8px;
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;  
-    background: rgba(0, 255, 248, 0.503) ;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 255, 248, .503);
+    display: none;
 }
 
-.hover:hover{
-    cursor: pointer;
-    opacity: 1;
-    transition: 1s;
+.hover img {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
-
-
+.base:hover .hover {
+    display: block;
+}
 
 .contenido{
     color: var(--White, #FFF);
